25/02/2017

Changed:
	decreased reload time of AT-3 and AT-5 missile launchers
	optics model of BMP-1 gunner
	TI optics vision mode of HMMWV_TOW and M1135_ATGMV_EP1


24/02/2017

Added:
	zeroing function to BMP-1 IFV

Fixed:
	some issues related to BMP-1 IFV


23/02/2017

Fixed:
	HMMWV Terminal is represented by left bottom picture/icon from HMMWV (http://dev.withsix.com/issues/67544)
	all missiles and rockets are now visible from large distance


22/02/2017

Fixed:
	[ACR] First unit loaded as cargo (from back) to T810 (MG) isn't seen (http://dev.withsix.com/issues/64332)
	ACR Skoda Octavia had steering wheel turning into wrong direction


21/02/2017

Changed:
	reverted CIT #14888 bug fix
	commander optics model of some vehicles
	turret zeroing initial value of Dingo vehicles

Fixed:
	[ACR] Gunner from T810 (MG) is wounded on disembarking (http://dev.withsix.com/issues/39431)
	All GAZ Volga vehicles have unaccesible inventories from outside (http://dev.withsix.com/issues/66136)
	ACR Dingo MRAP had no external Gear menu access
	Dingo w/ GMG cloud effects are too big


20/02/2017

Added:
	Light version of UK-59 (UK59_ACR_Small)

Changed:
	ACR pistol sounds rearrenged, better new ACR sounds are used
	ACR SD pistol and SD EVO 3 sound configs adjusted to fit with other SD weapons

Fixed:
	ACR BREN SD sound changed to stock SD 5.56 sound as none of new ACR sounds fit it very well
	ACR CZ 750 used default M24 sound instead of new ACR sound
	ACR EVO 3 was playing MP5 sounds instead of new ACR sounds
	ACR vehicles are now OA-compatible
	ACR weapons are now OA-compatible


16/02/2017

Added:
	Mi-24 proper holographic sights

Changed:
	models of 20Rnd_9x19_EVO(SD) and 30Rnd_9x19_MP5SD magazines to more suitable

Fixed:
	SCAR_H_STD_EGLM_Spect no 1x option (http://dev.withsix.com/issues/17245)
	Mi-24 engine too vulnerable (http://dev.withsix.com/issues/26427)